--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
           <!--Menu Items-->
           <ul class="nav navbar-nav">
-	    <li><a href="../">Analize other APP</a></li>
+	    <li><a href="../index">Analize other APP</a></li>
             <li><a href="../recent_scans">Mis Escaneos</a></li>
           </ul>
 
