--- a/templates/base_top_only.html
+++ b/templates/base_top_only.html
@@ -52,7 +52,7 @@
 
           <!--Menu Items-->
           <ul class="nav navbar-nav">
-	    <li><a href="../"><span class="glyphicon glyphicon-arrow-left"></span>  Analize other APP</a></li>
+	    <li><a href="../index"><span class="glyphicon glyphicon-arrow-left"></span>  Analize other APP</a></li>
             <li><a href="../recent_scans">Mis Escaneos</a></li>
             <!-- <li><a href="../about">About</a></li> -->
           </ul>
