--- a/static/css/movil.css
+++ b/static/css/movil.css
@@ -201,28 +201,25 @@ body {
   font-size: 1.7em;
   font-family:Helvetica, Arial, sans-serif;
   -webkit-animation:move 2.5s linear infinite;
-  animation-duration: 3s;
-  animation-name: move;
   -webkit-transform:rotate(180deg);
-  transform:rotate(180deg);
   color:#036CA9;
 }
 
-#analizando div:nth-child(2) {-webkit-animation-delay:0.1s;animation-delay: 0.1s;}
-#analizando div:nth-child(3) {-webkit-animation-delay:0.2s;animation-delay: 0.2s;}
-#analizando div:nth-child(4) {-webkit-animation-delay:0.3s;animation-delay: 0.3s;}
-#analizando div:nth-child(5) {-webkit-animation-delay:0.4s;animation-delay: 0.4s;}
-#analizando div:nth-child(6) {-webkit-animation-delay:0.5s;animation-delay: 0.5s;}
-#analizando div:nth-child(7) {-webkit-animation-delay:0.6s;animation-delay: 0.6s;}
-#analizando div:nth-child(8) {-webkit-animation-delay:0.7s;animation-delay: 0.7s;}
-#analizando div:nth-child(9) {-webkit-animation-delay:0.8s;animation-delay: 0.8s;}
-#analizando div:nth-child(10) {-webkit-animation-delay:0.9s;animation-delay: 0.9s;}
+#analizando div:nth-child(2) {-webkit-animation-delay:0.1s;}
+#analizando div:nth-child(3) {-webkit-animation-delay:0.2s;}
+#analizando div:nth-child(4) {-webkit-animation-delay:0.3s;}
+#analizando div:nth-child(5) {-webkit-animation-delay:0.4s;}
+#analizando div:nth-child(6) {-webkit-animation-delay:0.5s;}
+#analizando div:nth-child(7) {-webkit-animation-delay:0.6s;}
+#analizando div:nth-child(8) {-webkit-animation-delay:0.7s;}
+#analizando div:nth-child(9) {-webkit-animation-delay:0.8s;}
+#analizando div:nth-child(10) {-webkit-animation-delay:0.9s;}
 
 @keyframes move {
-  0% {
-    left:0;
-    opacity:0;
-  }
+   0% {
+        left:0;
+        opacity:0;
+    }
     35% {
         left: 41%;
         -webkit-transform:rotate(0deg);
@@ -240,27 +237,4 @@ body {
     }
 }
 
-@-webkit-keyframes move {
-    0% {
-        left:0;
-        opacity:0;
-    }
-    35% {
-        left:41%;
-        -webkit-transform:rotate(0deg);
-        transform:rotate(0deg);
-        opacity:1;
-    }
-    65% {
-        left:59%;
-        -webkit-transform:rotate(0deg);
-        transform:rotate(0deg);
-        opacity:1;
-    }
-    100% {
-        left:100%;
-        -webkit-transform:rotate(-180deg);
-        transform:rotate(-180deg);
-        opacity:0;
-    }
-}
+
