--- a/templates/pdf/static_analysis_pdf.html
+++ b/templates/pdf/static_analysis_pdf.html
@@ -3,7 +3,7 @@
 
 <h1 align="center" class="page-header">Static Analysis - {{name}} </h1>
 <hr>
-
+	<img src="/static/img/uji.jpg" style="width:50%;heigh:50%"/>
                   <div class="col-lg-7">
                         <div class="panel panel-default">
                             <div class="panel-heading">
